--- a/src/index.html
+++ b/src/index.html
@@ -1,26 +1,21 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>CIMAPIAZZI Cloud</title>
-        <base href="/" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-        />
 
-        <link rel="icon" type="image/x-icon" href="favicon.ico" />
+<head>
+    <meta charset="utf-8" />
+    <title>CIMAPIAZZI Cloud</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-        <link
-            id="theme-css"
-            rel="stylesheet"
-            type="text/css"
-            href="assets/layout/styles/theme/lara-light-indigo/theme.css"
-        />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDojCnBqxEPLG3s476r6id2WLGHKalECn4"></script>
-    </head>
-    <body>
-        <app-root></app-root>
-    </body>
+    <link id="theme-css" rel="stylesheet" type="text/css" href="assets/layout/styles/theme/saga-green/theme.css" />
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1JYdBfuWQxh1CIiQLpiai0A-EPxYtogI"></script>
+</head>
+
+<body>
+    <app-root></app-root>
+</body>
+
 </html>
